# dip-cli

./: .actrc  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  QUICK_REFERENCE.md  README.md  pyproject.toml
.github/workflows/: build-and-release.yml  version-check.yml
scripts/: build.sh  install.sh  release.sh  setup-dev.sh  test-workflow.sh  test.sh  update.sh
scripts/utils/: logging.sh
src/dip/: __init__.py  __main__.py  config.py  manager.py  models.py  output.py  project.py
